cmake_minimum_required(VERSION 3.20)
project(binarysearch)

set(CMAKE_CXX_STANDARD 17)

add_executable(binarysearch main.cpp)
add_executable(bubblesort main.cpp)
add_executable(complete_search main.cpp)
add_executable(anagrams anagrams.cpp)
add_executable(greedy main.cpp)
add_executable(intersection main.cpp)
add_executable(study main.cpp)